<resources>
    <string name="app_name">SlidingTiles</string>
    <string name="title_activity_game_launch_centre">GameLaunchCentre</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Log_in_sign_up">Log in/Sign up</string>
    <string name="Guest">Play as guest</string>
    <string name="Title">Welcome To Game Center!</string>
    <string name="Slide_Title">Welcome To Sliding Tiles \n A Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="Tic_Title">Welcome To Tic Tac Toe \n A Puzzle Game where the player that completes a row, column or diagonal wins !</string>
    <string name="SlidingTilesTitle">Welcome To Sliding Tiles \n A Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="title_activity_login_sign_up">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Register">Register</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="Register_Here">Register Here</string>
    <string name="Login">Login</string>
</resources>
